--- a/17_moivietnam/Views/Shared/_Layout.cshtml
+++ b/17_moivietnam/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                             </div>
                             <div class="navbar-subpanel-item">
                                 <div class="navbar-contact-text">
-                                    <span class="h3">Get in touch</span>
+                                    <span class="h3">Liên hệ với chúng tôi</span>
                                     <div class="navbar-contact">
                                         <div class="rd-mailform rd-form" data-form-output="form-navbar" data-form-type="contact" method="post" >
                                             <div class="row row-20 row-gutters-20">
@@ -222,7 +222,7 @@
                             <li class="list-item">@Html.Raw(commonInfo.Address.Replace("\n", "<br>"))</li>
                         </ul>
                         <!-- Copyright-->
-                        <p class="rights footer-rights"><span>&copy; 2020&nbsp;</span><span>@commonInfo.Name</span><span>. All rights reserved.&nbsp;</span><a class="link link-inherit rights-link" href="/PrivacyPolicy">Privacy Policy</a></p>
+                        <p class="rights footer-rights"><span>&copy; 2020&nbsp;</span><span>@commonInfo.Name</span><span>.Build by <a href="http://concatgroup.anpero.com">Concat Group - Ccg</a>  All rights reserved.&nbsp;</span><a class="link link-inherit rights-link" href="/PrivacyPolicy">Privacy Policy</a></p>
                     </div>
                 </div>
             </div>
