--- a/17_moivietnam/Views/Home/Index.cshtml
+++ b/17_moivietnam/Views/Home/Index.cshtml
@@ -18,7 +18,11 @@
     <meta name="description" content="@commonInfo.Desc" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="@commonInfo.Name" />
-
+    <script>
+            if (window.location.protocol != "https:") {
+                window.location.protocol = "https:";
+            }
+    </script>
 }
 @if (ViewData["slide"] != null)
 {
@@ -197,33 +201,33 @@
                 <div class="image-block">
                     <img src="https://cdn.anpero.com/images/70/32021/12021030100011377.jpg" alt="" width="357" height="494" />
                     <div class="image-block-embed">-->
-                        <!-- Counter-->
-                        <!--<div class="counter">
-                            <div class="counter-value h2">
-                                <span data-counter="">25</span><span class="counter-unit">%</span>
-                            </div>
-                            <div class="counter-title">off</div>
-                        </div>
-                    </div>
+<!-- Counter-->
+<!--<div class="counter">
+                <div class="counter-value h2">
+                    <span data-counter="">25</span><span class="counter-unit">%</span>
                 </div>
+                <div class="counter-title">off</div>
             </div>
-            <div class="col-md-6 col-xl-7 col-xxl-6">
-                <h2 class="heading-decoration" data-animate='{"class":"fadeInRightBig"}'>100% Authentic <br> Products</h2>
-                <p class="big" data-animate='{"class":"fadeInRightBig","delay":".1"}'>At Pure, we offer a wide range of authentic Korean beauty products that are backed by lots of great reviews. Our store also provides regular discounts and free global shipping for all our clients.</p>
-                <div class="row row-5 row-content" data-animate='{"class":"fadeInRightBig","delay":".2"}'>
-                    <div class="col-sm-6">-->
-                        <!-- Blurb hover-->
-                        <!--<div class="blurb blurb-icon-left">
-                            <div class="blurb-header">
-                                <div class="blurb-icon thin-icon-ambulance"></div>
-                                <div class="blurb-title h4">Free Shipping Worldwide</div>
-                            </div>
-                            <div class="blurb-text"></div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">-->
-                        <!-- Blurb hover-->
-                        <!--<div class="blurb blurb-icon-left">
+        </div>
+    </div>
+</div>
+<div class="col-md-6 col-xl-7 col-xxl-6">
+    <h2 class="heading-decoration" data-animate='{"class":"fadeInRightBig"}'>100% Authentic <br> Products</h2>
+    <p class="big" data-animate='{"class":"fadeInRightBig","delay":".1"}'>At Pure, we offer a wide range of authentic Korean beauty products that are backed by lots of great reviews. Our store also provides regular discounts and free global shipping for all our clients.</p>
+    <div class="row row-5 row-content" data-animate='{"class":"fadeInRightBig","delay":".2"}'>
+        <div class="col-sm-6">-->
+<!-- Blurb hover-->
+<!--<div class="blurb blurb-icon-left">
+        <div class="blurb-header">
+            <div class="blurb-icon thin-icon-ambulance"></div>
+            <div class="blurb-title h4">Free Shipping Worldwide</div>
+        </div>
+        <div class="blurb-text"></div>
+    </div>
+</div>
+<div class="col-sm-6">-->
+<!-- Blurb hover-->
+<!--<div class="blurb blurb-icon-left">
                             <div class="blurb-header">
                                 <div class="blurb-icon thin-icon-documents"></div>
                                 <div class="blurb-title h4">Money Back Guarantee</div>
