--- a/17_moivietnam/Views/Product/Checkout.cshtml
+++ b/17_moivietnam/Views/Product/Checkout.cshtml
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row">
             <section class="section-md bg-transparent">
-                <h3>Giỏ hàng</h3>
+                <h3>Đơn hàng</h3>
                 <div class="page-content checkout-page" id="cartContent1">
                     <div class="col-md-12">
                         <h3 class="checkout-sep mt-25">1. Kiểm tra lại thông tin sản phẩm</h3>
