--- a/17_moivietnam/Views/Shared/_Layout.cshtml
+++ b/17_moivietnam/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
                                                         <div id="g-recaptcha"></div>
                                                     </div>
                                                     <div class="error contact-err"></div>
-                                                    <button class="btn" type="button" id="btn-send-contact">Send message</button>
+                                                    <button class="btn" type="button" id="btn-send-contact">Gửi tin nhắn</button>
                                                 </div>
                                             </div>
                                         </div>
