--- a/17_moivietnam/Views/Product/Checkout.cshtml
+++ b/17_moivietnam/Views/Product/Checkout.cshtml
@@ -402,7 +402,9 @@
         border-color: #333;
         color: #fff;
     }
-
+    .cart_description{
+        max-width:300px;
+    }
     .btn {
         border: 1px solid #acdbb4;
         color: #fff;
