--- a/17_moivietnam/Views/Home/Policy.cshtml
+++ b/17_moivietnam/Views/Home/Policy.cshtml
@@ -1,10 +1,17 @@
-﻿@{
+﻿@using AnperoFrontend.WebService;
+@{
     AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();
     if (ViewData["commonInfo"] != null)
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
         ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau(commonInfo.Desc);
         ViewBag.WebsiteUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+    }
+    var backGroundImg = "https://cdn.anpero.com/images/38/22021/bg-1-1920x4962021022814580386.jpg";
+    Ads[] ads4 = (Ads[])ViewData["ads4"];
+    if (ads4 != null && ads4.Count() > 0)
+    {
+        backGroundImg = ads4.OrderBy(x => Guid.NewGuid()).First().ImagesUrl;
     }
 }
 @section health{
@@ -16,7 +23,8 @@
     <meta property="og:url" content="@ViewBag.WebsiteUrl" />
     <meta property="og:image" content="@commonInfo.Logo" />
 }
-<section class="section page-title bg-image context-dark" style="background-image: url(https://cdn.anpero.com/images/38/22021/bg-1-1920x4962021022814580386.jpg);">
+
+<section class="section page-title bg-image context-dark" style="background-image: url(@backGroundImg);">
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-xl-8">
@@ -42,5 +50,5 @@
 </section>
 <script>
 
-        </script>
+</script>
     }
