--- a/17_moivietnam/Views/Shared/_Layout.cshtml
+++ b/17_moivietnam/Views/Shared/_Layout.cshtml
@@ -162,7 +162,7 @@
         @RenderBody()
 
         <!-- Awards-->
-        <section class="section-sm text-center bg-secondary-light" style="background-color: #f8a19e;">
+        <section class="section-sm text-center bg-secondary-light" style="background-color: #FEEEEF;">
             <div class="container">
                 <div class="owl-carousel owl-vertical-center owl-content-1" data-owl="{&quot;dots&quot;:true}" data-items="2" data-sm-items="3" data-md-items="4" data-lg-items="5">
                     @if (ViewData["ads1"] != null)
