--- a/17_moivietnam/assets/components/base/_variables.scss
+++ b/17_moivietnam/assets/components/base/_variables.scss
@@ -15,7 +15,7 @@ $primary-dark:  darken( $primary, 5% );
 $primary-light: lighten( $primary, 5% );
 
 $secondary:       #F68D8D;
-$secondary-light: #FEEEEF;
+$secondary-light: #eb99af;
 
 $context-light: rgba( $white, .6 );
 
