--- a/17_moivietnam/Views/Shared/_Layout.cshtml
+++ b/17_moivietnam/Views/Shared/_Layout.cshtml
@@ -30,6 +30,11 @@
     @RenderSection("health", required: false)
     @RenderSection("Styles", required: false)
     <link href='/static/css' rel='stylesheet' type='text/css'>
+    <style>
+        body {
+            background-color: #ffdfea;
+        }
+    </style>
 </head>
 <body>
     <div class="page">
@@ -162,7 +167,7 @@
         @RenderBody()
 
         <!-- Awards-->
-        <section class="section-sm text-center bg-secondary-light" style="background-color: #eb99af;">
+        <section class="section-sm text-center bg-secondary-light">
             <div class="container">
                 <div class="owl-carousel owl-vertical-center owl-content-1" data-owl="{&quot;dots&quot;:true}" data-items="2" data-sm-items="3" data-md-items="4" data-lg-items="5">
                     @if (ViewData["ads1"] != null)
